# windows-defender-close

./: .gitignore  CMakeLists.txt  CNAME  LICENSE  README.md  buildFromVS2019.bat  dwctrl.cpp  dwctrl.h  main.cpp  mainui.cpp  mainui.h  mainui.ui  package-lock.json  setup_package.iss  setup_package_user.iss  ts2qm.bat  windows_build.bat  windows_checksums.bat  windows_create_update_ts2qm.bat
.github/workflows/: Windows.yml
docs/: index.md
docs/.vitepress/: config.mts
docs/.vitepress/theme/: custom.css
docs/public/logo/: svg2ico.py
msix/: AppxBlockMap.xml  AppxManifest.xml
resources/licenses/: License.md  PrivacyAndDataProtection.md
translations/: en_us.ts  zh_cn.ts  zh_tw.ts
